--- a/index.html
+++ b/index.html
@@ -1,48 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
-  <title>Frontend Mentor | Profile card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="stylesheet" href="style.css">
+    <title>Frontend Mentor | Profile card component</title>
+    <style>
+        .attribution {
+            font-size: 11px;
+            text-align: center;
+        }
+        .attribution a {
+            color: hsl(228, 45%, 44%);
+        }
+    </style>
 </head>
-
 <body>
-  <section class="main">
-    <div class="container">
-      <div class="upper-container"></div>
-      <div ><img src="./images/image-victor.jpg" alt="" class="img-sec"> </div>      
-          <div class="card-body">
-            <h2 class="name">Victor Crest <span alt="" class="age">26</span></h2>
-            <h3 class="city">London</h3>
-            <div class="acttivity-container " alt="" ></div>
-              <h4>80k  <span class="act"> Followers</span></h4>
-              <h4>803K <span class="act">Likes</span></h4>
-              <h4>1.4K <span class="act">Photos</span></h4> 
+    <section class="main">
+        <div class="container">
+            <div class="upper-container"></div>
+            <div>
+                <img src="./images/image-victor.jpg" alt="Victor's Profile Picture" class="img-sec">
             </div>
-          </div>
+            <div class="card-body">
+                <h2 class="name">Victor Crest <span class="age">26</span></h2>
+                <h3 class="city">London</h3>
+                <div class="activity-container">
+                    <h4>80k <span class="act">Followers</span></h4>
+                    <h4>803K <span class="act">Likes</span></h4>
+                    <h4>1.4K <span class="act">Photos</span></h4>
+                </div>
+            </div>
         </div>
-  </section>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Rafael Marjoub</a>.
-  </div>
+    </section>
+    <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Rafael Marjoub</a>.
+    </div>
 </body>
-
 </html>
